Complete kernel terminal and finish exploit demonstration

--- a/meaty-skeleton/kernel/Makefile
+++ b/meaty-skeleton/kernel/Makefile
@@ -47,6 +47,7 @@ kernel/stdlib/malloc.o \
 kernel/stdio/read.o \
 kernel/userspace.o \
 kernel/memmap.o \
+kernel/progmanager.o \
 user/user0.o \
 user/user1.o \
 user/user2.o \
